--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -26,6 +26,7 @@
     "openai": "^6.16.0",
     "pg": "^8.17.1",
     "react": "^19.2.3",
+    "react-diff-viewer": "^3.1.1",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
