--- a/projects/u7agent/tsconfig.json
+++ b/projects/u7agent/tsconfig.json
@@ -32,7 +32,9 @@
     "next-env.d.ts",
     "next.config.ts",
     "src/**/*.ts",
-    "src/**/*.tsx"
+    "src/**/*.tsx",
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
