--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@hono/node-server": "^1.19.9",
     "@hono/standard-validator": "^0.2.2",
+    "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-router": "^1.157.16",
