--- a/projects/file-server/package.json
+++ b/projects/file-server/package.json
@@ -7,13 +7,13 @@
     "test": "bun test"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.7.2",
-    "hono": "^4.8.10",
-    "mime-types": "^3.0.1",
-    "zod": "^4.0.14"
+    "@hono/zod-validator": "^0.7.6",
+    "hono": "^4.11.7",
+    "mime-types": "^3.0.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.1.2",
+    "@biomejs/biome": "^2.3.13",
     "@types/bun": "latest",
     "@types/mime-types": "^3.0.1"
   }
