--- a/projects/u7agent/package.json
+++ b/projects/u7agent/package.json
@@ -13,13 +13,14 @@
     "@ai-sdk/openai": "^3.0.25",
     "@ai-sdk/rsc": "^2.0.67",
     "@keyv/sqlite": "^4.0.8",
+    "@t3-oss/env-nextjs": "^0.13.10",
+    "js-yaml": "^4.1.1",
     "keyv": "^5.6.0",
     "next": "^16.1.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "streamdown": "^2.1.0",
-    "zod": "^4.3.6",
-    "js-yaml": "^4.1.1"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
