--- a/projects/file-server/package.json
+++ b/projects/file-server/package.json
@@ -14,9 +14,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.13",
-    "@types/bun": "latest",
+    "@types/bun": "^1.3.8",
     "@types/mime-types": "^3.0.1",
-    "@types/node": "^18",
+    "@types/node": "^25.2.0",
     "typescript": "^5.9.3"
   }
 }
