--- a/projects/u7agent/package.json
+++ b/projects/u7agent/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.26",
-    "@ai-sdk/rsc": "^2.0.77",
+    "@ai-sdk/rsc": "^2.0.78",
     "@keyv/sqlite": "^4.0.8",
     "@t3-oss/env-nextjs": "^0.13.10",
     "js-yaml": "^4.1.1",
@@ -21,7 +21,8 @@
     "next": "^16.1.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "streamdown": "^2.1.0",
+    "streamdown": "^2.2.0",
+    "u7agent": ".",
     "zod": "^4.3.6"
   },
   "devDependencies": {
