fix(portal): move docker group config to compose
Configure docker group membership via docker-compose group_add instead of Dockerfile to fix socket permissions at runtime

--- a/deploy/portal.yml
+++ b/deploy/portal.yml
@@ -12,5 +12,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
+    group_add:
+      - "987" # ホストのdockerグループID (stat -c '%g' /var/run/docker.sock で確認)
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro # 読み取り専用
