--- a/projects/portal/package.json
+++ b/projects/portal/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "bun --hot src/index.ts",
+    "dev:mock": "USE_MOCK_DATA=true bun --hot src/index.ts",
     "start": "NODE_ENV=production bun src/index.ts",
+    "start:mock": "USE_MOCK_DATA=true NODE_ENV=production bun src/index.ts",
     "build": "bun run build.ts"
   },
   "dependencies": {
