refactor(portal): remove build step and simplify docker setup
Remove the build.ts script and builder stage from Dockerfile to simplify deployment. Application now runs directly from source using bun run start instead of pre-building. This eliminates the need for static file serving routes in index.ts and reduces complexity in the container setup.

--- a/projects/portal/Dockerfile
+++ b/projects/portal/Dockerfile
@@ -10,23 +10,7 @@ WORKDIR /app
 COPY package.json bun.lock ./
 RUN bun install --frozen-lockfile
 
-# Stage 2: ビルド
-FROM oven/bun:1 AS builder
-
-WORKDIR /app
-
-# 依存関係をコピー
-COPY --from=dependencies /app/node_modules ./node_modules
-COPY --from=dependencies /app/package.json ./package.json
-
-# ソースコードをコピー
-COPY . .
-
-# 本番用ビルド
-ENV NODE_ENV=production
-RUN bun run build
-
-# Stage 3: 本番環境
+# Stage 2: 本番環境
 FROM oven/bun:1-slim AS production
 
 WORKDIR /app
@@ -51,9 +35,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 # 必要なファイルのみをコピー
-COPY --from=builder --chown=appuser:appuser /app/dist ./dist
-COPY --from=builder --chown=appuser:appuser /app/package.json ./
-COPY --from=builder --chown=appuser:appuser /app/node_modules ./node_modules
+COPY --from=dependencies --chown=appuser:appuser /app/package.json ./
+COPY --from=dependencies --chown=appuser:appuser /app/node_modules ./node_modules
+COPY --chown=appuser:appuser bunfig.toml ./
+COPY --chown=appuser:appuser tsconfig.json ./
+COPY --chown=appuser:appuser src ./src
 
 # 非rootユーザーに切り替え
 USER appuser
@@ -65,6 +51,5 @@ EXPOSE 3000
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
     CMD bun -e "fetch('http://localhost:3000/api/hello').then(r => r.ok ? process.exit(0) : process.exit(1)).catch(() => process.exit(1))"
 
-# アプリケーション起動 (distディレクトリから実行する必要がある)
-WORKDIR /app/dist
-CMD ["bun", "index.js"]
+# アプリケーション起動
+CMD ["bun", "run", "start"]
