--- a/projects/portal/package.json
+++ b/projects/portal/package.json
@@ -7,8 +7,7 @@
     "dev": "bun --hot src/index.ts",
     "dev:mock": "USE_MOCK_DATA=true bun --hot src/index.ts",
     "start": "NODE_ENV=production bun src/index.ts",
-    "start:mock": "USE_MOCK_DATA=true NODE_ENV=production bun src/index.ts",
-    "build": "bun run build.ts"
+    "start:mock": "USE_MOCK_DATA=true NODE_ENV=production bun src/index.ts"
   },
   "dependencies": {
     "bun-plugin-tailwind": "^0.1.2",
