--- a/projects/portal/package.json
+++ b/projects/portal/package.json
@@ -7,7 +7,11 @@
     "dev": "bun --hot src/index.ts",
     "dev:mock": "USE_MOCK_DATA=true bun --hot src/index.ts",
     "start": "NODE_ENV=production bun src/index.ts",
-    "start:mock": "USE_MOCK_DATA=true NODE_ENV=production bun src/index.ts"
+    "start:mock": "USE_MOCK_DATA=true NODE_ENV=production bun src/index.ts",
+    "lint": "oxlint .",
+    "lint:fix": "oxlint . --fix",
+    "format": "oxfmt .",
+    "format:check": "oxfmt . --check"
   },
   "dependencies": {
     "bun-plugin-tailwind": "^0.1.2",
@@ -16,8 +20,10 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/bun": "latest"
+    "oxfmt": "^0.32.0",
+    "oxlint": "^1.47.0"
   }
 }
