--- a/projects/portal/package.json
+++ b/projects/portal/package.json
@@ -7,17 +7,24 @@
     "dev": "bun --hot src/index.ts",
     "dev:mock": "USE_MOCK_DATA=true bun --hot src/index.ts",
     "start": "NODE_ENV=production bun src/index.ts",
-    "start:mock": "USE_MOCK_DATA=true NODE_ENV=production bun src/index.ts"
+    "start:mock": "USE_MOCK_DATA=true NODE_ENV=production bun src/index.ts",
+    "lint": "tsc --noEmit && oxlint .",
+    "lint:fix": "oxlint . --fix",
+    "format": "oxfmt .",
+    "format:check": "oxfmt . --check"
   },
   "dependencies": {
     "bun-plugin-tailwind": "^0.1.2",
-    "react": "^19",
-    "react-dom": "^19",
-    "tailwindcss": "^4.1.11"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "oxfmt": "^0.32.0",
+    "oxlint": "^1.47.0",
+    "typescript": "^5.9.3"
   }
 }
