--- a/deploy/portal.yml
+++ b/deploy/portal.yml
@@ -9,6 +9,8 @@ services:
     restart: unless-stopped # 手動停止時は再起動しない
     ports:
       - 3000:3000
+    env_file:
+      - .env.secret
     environment:
       - NODE_ENV=production
       - PORT=3000
