chore: add ca-certificates to Dockerfile
Add ca-certificates package to enable SSL/TLS certificate
   verification for Claude Code setup

--- a/projects/portfolio/Dockerfile
+++ b/projects/portfolio/Dockerfile
@@ -32,7 +32,7 @@ RUN groupadd --gid $USER_GID $USERNAME \
   && useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME
 
 RUN apt-get update \
-  && apt-get install --no-install-recommends -y sudo curl git openssh-client \
+  && apt-get install --no-install-recommends -y ca-certificates sudo curl git openssh-client \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* \
   && npm i -g @aikidosec/safe-chain \
