--- a/deploy/litellm.yml
+++ b/deploy/litellm.yml
@@ -13,6 +13,8 @@ services:
       - .env.secret
     environment:
       STORE_MODEL_IN_DB: "True"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - litellm-db
 
