chore(file-server): update biome schema and add trusted domain
Update biome.json schema from 2.3.13 to 2.4.2

Add biomejs.dev to trusted domains in devcontainer settings

--- a/projects/file-server/.devcontainer/devcontainer.json
+++ b/projects/file-server/.devcontainer/devcontainer.json
@@ -38,6 +38,9 @@
         "editor.codeActionsOnSave": {
           "quickfix.biome": "explicit",
           "source.organizeImports.biome": "explicit"
+        },
+        "json.schemaDownload.trustedDomains": {
+          "https://biomejs.dev/": true
         }
       },
       "extensions": ["biomejs.biome"]
