chore(portfolio): update devcontainer configuration
- Add workspaceFolder and workspaceMount settings
- Add volume mount for node_modules
- Extract post-create commands to separate script
- Fix JSON trailing commas for consistency

--- a/projects/portfolio/.devcontainer/devcontainer.json
+++ b/projects/portfolio/.devcontainer/devcontainer.json
@@ -2,15 +2,20 @@
   "name": "portfolio",
   "build": {
     "dockerfile": "../Dockerfile",
-    "target": "dev"
+    "target": "dev",
   },
+  "workspaceFolder": "/workspaces/monorepo/projects/portfolio",
+  "workspaceMount": "source=${localWorkspaceFolder}/../..,target=/workspaces/monorepo,type=bind,consistency=cached",
   "appPort": ["3000:3000"],
   "containerEnv": {
-    "SHELL": "/bin/bash"
+    "SHELL": "/bin/bash",
   },
   "remoteUser": "vscode",
   "updateRemoteUserUID": false,
-  "postCreateCommand": "sudo rm -f /etc/sudoers.d/vscode && safe-chain --version && bun i && [ -e .env ] || cp .env.example .env",
+  "mounts": [
+    "source=portfolio-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume",
+  ],
+  "postCreateCommand": "bash .devcontainer/post-create.sh",
   "customizations": {
     "vscode": {
       "settings": {
@@ -20,8 +25,8 @@
         "editor.defaultFormatter": "oxc.oxc-vscode",
         // for Tailwind CSS --
         "files.associations": {
-          "*.css": "tailwindcss"
-        }
+          "*.css": "tailwindcss",
+        },
         // "emeraldwalk.runonsave": {
         //   "commands": [
         //     {
@@ -49,9 +54,9 @@
         "shardulm94.trailing-spaces",
         // "emeraldwalk.RunOnSave",
         "bradlc.vscode-tailwindcss",
-        "stivo.tailwind-fold"
+        "stivo.tailwind-fold",
         // -- for Tailwind CSS
-      ]
-    }
-  }
+      ],
+    },
+  },
 }
