--- a/projects/portfolio/.oxfmtrc.json
+++ b/projects/portfolio/.oxfmtrc.json
@@ -9,7 +9,7 @@
   "trailingComma": "es5",
   "endOfLine": "lf",
   "experimentalSortImports": {
-    "groups": [["side-effect"], ["builtin"], ["external"], ["internal"], ["parent", "sibling", "index"]],
+    "groups": [["side_effect"], ["builtin"], ["external"], ["internal"], ["parent", "sibling", "index"]],
     "sortSideEffects": false,
     "newlinesBetween": false,
     "ignoreCase": true
