refactor(workflows): extract cleanup logic into composite action
Extract Docker image cleanup into cleanup-docker-images composite action for better modularity and reusability.

Additional improvements:
- Fix bash array syntax error in get-changed-dirs.sh (remove commas)
- Add descriptive comments to shell scripts explaining CSV/newline handling
- Improve fetch-depth comments in workflow files
- Update CI/CD documentation with clearer structure and new action details

--- a/.github/workflows/pullrequest-check.yml
+++ b/.github/workflows/pullrequest-check.yml
@@ -8,13 +8,16 @@ on:
 
 jobs:
   pull-request-check-if-changes-detected:
-    runs-on: ubuntu-latest # Docker Command を使うので ubuntu-slim は利用できない
+    # Docker commands require ubuntu-latest, ubuntu-slim is not available
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 50 # プルリクエストの差分を取得するのに十分な履歴
+          # PRのベースブランチとの差分取得に必要な履歴深度
+          # 50コミットあれば通常のPRの変更はカバーできる
+          fetch-depth: 50
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Fetch base branch for comparison
