--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,13 +8,16 @@ on:
 
 jobs:
   docker-build-if-changes-detected:
-    runs-on: ubuntu-latest # Docker Command を使うので ubuntu-slim は利用できない
+    # Dockerコマンドを使用するため、ubuntu-slimでは利用できない
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2 # 最新の2つのコミットをフェッチ (PRからのマージコミットが取れれば良い)
+          # プッシュイベントでは直前のコミットとの差分で十分
+          # 2コミット分の履歴で変更検出が可能
+          fetch-depth: 2
 
       - name: Get Changed Directories
         uses: ./.github/actions/get-changed-directories
@@ -42,22 +45,10 @@ jobs:
           password: ${{ secrets.PRIVATE_REPO_TOKEN }}
 
       - name: Clean Up Docker Images
-        if: env.BUILD_PROJECT != ''
-        env:
-          GH_TOKEN: ${{ secrets.PRIVATE_REPO_TOKEN }}
-          REPO_NAME: ${{ secrets.PRIVATE_REPO_NAME }}
-          KEEP_COUNT: 3
-        run: |
-          export KEEP_COUNT="$KEEP_COUNT"
-          echo "project_names_csv = ${{ steps.push_images.outputs.project_names_csv }}"
-          curl -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer $GH_TOKEN" \
-            https://api.github.com/repos/u7chan/$REPO_NAME/dispatches \
-            -d '{
-              "event_type": "deploy_trigger",
-              "client_payload": {
-                "target": "${{ steps.push_images.outputs.project_names_csv }}",
-                "keep_count": "'"$KEEP_COUNT"'"
-              }
-            }'
+        if: steps.push_images.outputs.project_names_csv != ''
+        uses: ./.github/actions/cleanup-docker-images
+        with:
+          token: ${{ secrets.PRIVATE_REPO_TOKEN }}
+          repo-name: ${{ secrets.PRIVATE_REPO_NAME }}
+          project-names-csv: ${{ steps.push_images.outputs.project_names_csv }}
+          keep-count: 3
