feat(cicd): add required-stage filter for CI-only projects
Add required-stage input to get-changed-projects action to filter projects by Dockerfile stage. This allows CI-only projects (without final stage) to be skipped during CD builds.

- Add required-stage parameter to get-changed-projects action
- Update docker-build workflow to require final stage
- Convert cicd-ci-sample to CI-only project (remove final stage)
- Update documentation for CI-only project workflow

--- a/.github/actions/get-changed-projects/action.yml
+++ b/.github/actions/get-changed-projects/action.yml
@@ -1,6 +1,12 @@
 name: Get Changed Projects
 description: Get a list of projects with Dockerfile whose differences have been changed
 
+inputs:
+  required-stage:
+    description: "If specified, only include projects that have this stage in their Dockerfile"
+    required: false
+    default: ""
+
 runs:
   using: composite
   steps:
@@ -8,4 +14,4 @@ runs:
       shell: bash
       run: |
         # 共通スクリプトを実行
-        ${{ github.action_path }}/get-changed-projects.sh
+        ${{ github.action_path }}/get-changed-projects.sh "${{ inputs.required-stage }}"
