--- a/projects/cicd-ci-sample/Dockerfile
+++ b/projects/cicd-ci-sample/Dockerfile
@@ -1,6 +1,7 @@
 # -----------------------------------------------
-# CI用サンプル - testステージあり
+# CI専用サンプル - testステージのみ
 # PR時にCIが発火してビルド検証を行う
+# finalステージがないため、CD対象外となりイメージはビルドされない
 # -----------------------------------------------
 
 FROM alpine:3.21 AS base
@@ -22,18 +23,4 @@ RUN echo "=== Running tests (CI validation) ===" && \
     chmod +x scripts/test.sh && \
     ./scripts/test.sh
 
-# -----------------------------------------------
-# final stage
-# -----------------------------------------------
-FROM base AS final
-
-ARG COMMIT_HASH
-
-ENV APP_VERSION="${COMMIT_HASH}"
-
-COPY scripts/ scripts/
-
-RUN echo "=== CI Sample Build Complete ===" && \
-    echo "Version: ${APP_VERSION}"
-
-CMD ["echo", "CI sample - use --target=test for CI validation"]
+# finalステージはない - このプロジェクトはCI専用
