fix(projects): update Dockerfiles to use final stage for CD compliance
Rename runner/production stages to final to comply with the monorepo CI/CD pipeline requirements. The CD workflow uses required-stage: final filter, so projects without this stage were being skipped during deployment.

Affected projects:
- file-server: runner -> final
- hono-mcp-server: build -> builder, runner -> final, add test stage
- portal: production -> final, add test stage
- u7agent: runner -> final, add test stage
- u7chat: runner -> final, add test stage

--- a/projects/portal/Dockerfile
+++ b/projects/portal/Dockerfile
@@ -1,17 +1,39 @@
 # Docker Container Portal - Dockerfile
 # マルチステージビルドで最適化されたイメージ
 
-# Stage 1: 依存関係のインストール
-FROM oven/bun:1 AS dependencies
+ARG COMMIT_HASH=""
+
+# -----------------------------------------------
+# base stage
+# -----------------------------------------------
+FROM oven/bun:1 AS base
 
 WORKDIR /app
+
+# -----------------------------------------------
+# test stage
+# -----------------------------------------------
+FROM base AS test
+
+COPY package.json bun.lock ./
+RUN bun install --frozen-lockfile
+
+COPY . .
+RUN bun run lint
+
+# -----------------------------------------------
+# dependencies stage
+# -----------------------------------------------
+FROM base AS dependencies
 
 # パッケージファイルのみをコピーしてキャッシュを最適化
 COPY package.json bun.lock ./
 RUN bun install --frozen-lockfile
 
-# Stage 2: 本番環境
-FROM oven/bun:1-slim AS production
+# -----------------------------------------------
+# final stage
+# -----------------------------------------------
+FROM oven/bun:1-slim AS final
 
 WORKDIR /app
 
