feat(simple-agent-poc): add Dockerfile for CI-only testing
Add multi-stage Dockerfile with test stage for CI pipeline.

- Use Python 3.14-slim base image

- Install uv package manager

- Run ruff, ty, and pytest in test stage

- Log COMMIT_HASH before running tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
+# Ignore files that track recently changed directories and build projects
 changed_dirs.txt
 build_projects.txt
+
+# Ignore local settings for Claude
+.claude/settings.local.json
