refactor(deploy): update litellm config to use mounted config file
Change from environment-based config to file-based config using Docker volumes.

Removes STORE_MODEL_IN_DB environment variable and adds read-only config directory mount.

--- a/deploy/litellm.yml
+++ b/deploy/litellm.yml
@@ -9,10 +9,10 @@ services:
     restart: always
     ports:
       - 4000:4000
+    volumes:
+      - ./config:/app/config:ro
     env_file:
       - .env.secret
-    environment:
-      STORE_MODEL_IN_DB: "True"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
