--- a/deploy/litellm.yml
+++ b/deploy/litellm.yml
@@ -11,6 +11,7 @@ services:
       - 4000:4000
     volumes:
       - ./config:/app/config:ro
+    command: ["--config", "/app/config/config.yaml"]
     env_file:
       - .env.secret
     extra_hosts:
