feat(deploy): set LiteLLM timezone to JST (Asia/Tokyo)
Add TZ environment variable to LiteLLM services for consistent JST logging and timestamps

--- a/projects/litellm-proxy-lab/docker-compose.yaml
+++ b/projects/litellm-proxy-lab/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
     command: ["--config", "/app/config/config.yaml"]
     env_file:
       - .env
+    environment:
+      - TZ=Asia/Tokyo
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
