--- a/deploy/litellm.yml
+++ b/deploy/litellm.yml
@@ -14,6 +14,8 @@ services:
     command: ["--config", "/app/config/config.yaml"]
     env_file:
       - .env.secret
+    environment:
+      - TZ=Asia/Tokyo
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
